minor initial changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-description: "Bakchod researcher"
+description: "Senior undergraduate"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 ---
 
-I is bakchod. Thenk you.
+I am interested in mathematics and the theoretical aspects of computer science.
